@@ -19,6 +19,13 @@ use warnings;
         output      => "foo.load:10.316|ms\n",
     },
     {
+        description => "timing with rate",
+        autoflush   => 1,
+        prefix      => 'foo.',
+        input       => [ [qw/ timing load 123 0.5 /], ],
+        output      => "foo.load:123|ms|\@0.500000\n",
+    },
+    {
         description => "timing_ms (alias for timing)",
         autoflush   => 1,
         prefix      => 'foo.',
