@@ -1,6 +1,8 @@
 Revision history for Net-Statsd-Tiny
 
 {{$NEXT}}
+  [Enhancements]
+  - Added rate option for logging timings.
 
 v0.1.1    2018-02-05 15:28:33+00:00 Europe/London
   [Bug Fixes]
